<resources>
    <string name="app_name">THAR</string>
    <string name="tagline">Where Bedouin Technocrats Run The Show</string>

    <string name="techknights_msg">Made with ❤ from Techknights.</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="events">Events</string>
    <string name="workshops">Workshops</string>
    <string name="pronites">Pronites</string>
    <string name="lecture">Guest Lectures</string>
    <string name="exhibition">Exhibition</string>

    <string name="team">Team</string>
    <string name="enquiry">Enquiry</string>
    <string name="collegMap">College Map</string>
    <string name="sponsers">Sponsors</string>
    <string name="eventAttraction">Explore</string>
    <string name="adminPanel">Admin\'s Block</string>
    <string name="feedPost">Feed Post</string>
    <string name="scanQR">Scan QR Code</string>

    <string name="help">Help</string>

    <string name="notification">Notifications</string>


    <!--    Content Description-->
    <string name="cd_notifications">Live notifications</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_maps3">Map</string>

</resources>
