<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/feed_background"
    style="@style/AppTheme"
    tools:context=".ui.home.HomeActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomBar"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="70dp"

                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="400dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/ll_enquiry"
                        android:clickable="true"
                        android:foreground="@drawable/button_ripple_effect"
                        android:layout_width="match_parent"
                        android:layout_height="280dp">

                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="280dp"
                            android:alpha="0.85"
                            android:background="#8604DC">

                        </LinearLayout>

                        <ImageView
                            android:layout_centerHorizontal="true"
                            android:layout_above="@+id/enquirytext"
                            android:layout_width="50dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_enquiry_white" />

                        <TextView
                            android:id="@+id/enquirytext"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:fontFamily="@font/montserrat_bold"
                            android:textColor="@android:color/white"
                            android:text="@string/enquiry"/>


                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/ll_team"
                        android:clickable="true"
                        android:foreground="@drawable/button_ripple_effect"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="120dp">

                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="280dp"
                            android:alpha="0.85"
                            android:background="#27946B">

                        </LinearLayout>

                        <ImageView
                            android:layout_centerHorizontal="true"
                            android:layout_above="@+id/teamText"
                            android:layout_width="50dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_team_white" />

                        <TextView
                            android:id="@+id/teamText"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:fontFamily="@font/montserrat_bold"
                            android:textColor="@android:color/white"
                            android:text="@string/team"/>


                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="400dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/ll_sponsors"
                        android:clickable="true"
                        android:foreground="@drawable/button_ripple_effect"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="120dp">

                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="280dp"
                            android:alpha="0.85"
                            android:background="#9DAE26">

                        </LinearLayout>

                        <ImageView
                            android:layout_centerHorizontal="true"
                            android:layout_above="@+id/sponserText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_sponsers_white" />

                        <TextView
                            android:id="@+id/sponserText"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:fontFamily="@font/montserrat_bold"
                            android:textColor="@android:color/white"
                            android:text="@string/sponsers"/>


                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/ll_explore"
                        android:clickable="true"
                        android:foreground="@drawable/button_ripple_effect"
                        android:layout_width="match_parent"
                        android:layout_height="280dp">

                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="280dp"
                            android:alpha="0.85"
                            android:background="#D23838">

                        </LinearLayout>

                        <ImageView
                            android:layout_centerHorizontal="true"
                            android:layout_above="@+id/attractionText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_explore_white" />

                        <TextView
                            android:id="@+id/attractionText"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:fontFamily="@font/montserrat_bold"
                            android:textColor="@android:color/white"
                            android:text="@string/eventAttraction"/>


                    </RelativeLayout>

                </LinearLayout>



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/ll_collegeMap"
                    android:clickable="true"
                    android:foreground="@drawable/button_ripple_effect"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.85"
                        android:background="#8604DC">

                    </LinearLayout>

                    <ImageView
                        android:layout_centerHorizontal="true"
                        android:layout_above="@+id/text"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_map_white" />

                    <TextView
                        android:id="@+id/text"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@android:color/white"
                        android:text="@string/collegMap"/>


                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:clickable="true"
                        android:foreground="@drawable/button_ripple_effect"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_menu_camera" />

                    <ImageView
                        android:clickable="true"
                        android:foreground="@drawable/button_ripple_effect"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_menu_camera" />
                    <ImageView
                        android:clickable="true"
                        android:foreground="@drawable/button_ripple_effect"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_menu_camera" />

                    <ImageView
                        android:clickable="true"
                        android:foreground="@drawable/button_ripple_effect"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_menu_camera" />



                </LinearLayout>

            </LinearLayout>


        </LinearLayout>




    </ScrollView>

    <include layout="@layout/top_toolbar" />


    <me.ibrahimsn.lib.SmoothBottomBar
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:backgroundColor="#0D0302"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>


